# adapter-test-task

./: .env.dev  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py  main.py
app/core/: __init__.py  db.py  interfaces.py  lifespan.py  redis.py  settings.py
tests/: test_app.py
