[tool.poetry]
name = "core"
version = "0.1.0"
description = "Core module for FastAPI service with PostgreSQL and Redis"
authors = ["Artem Strekalov <suddenthedev@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { version = "^0.27.0", extras = ["standard"] }
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
greenlet = "^3.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
